[gd_scene load_steps=36 format=2]

[ext_resource path="res://bgm/living1.jpg" type="Texture" id=1]
[ext_resource path="res://bgm/living2.jpg" type="Texture" id=2]
[ext_resource path="res://bgm/cocina2.jpg" type="Texture" id=3]
[ext_resource path="res://bgm/cocina1.jpg" type="Texture" id=4]
[ext_resource path="res://images/ENDING.jpg" type="Texture" id=5]
[ext_resource path="res://images/minibar.png" type="Texture" id=6]
[ext_resource path="res://bgm/patio2.jpg" type="Texture" id=7]
[ext_resource path="res://bgm/creidtos.jpg" type="Texture" id=8]
[ext_resource path="res://tilsets/Tilset.tres" type="TileSet" id=9]
[ext_resource path="res://Items/Contenedor.gd" type="Script" id=10]
[ext_resource path="res://images/heladeraAbajo.png" type="Texture" id=11]
[ext_resource path="res://images/heladeraArriba.png" type="Texture" id=12]
[ext_resource path="res://images/armario.png" type="Texture" id=13]
[ext_resource path="res://images/mesada.png" type="Texture" id=14]
[ext_resource path="res://images/cofre.png" type="Texture" id=15]
[ext_resource path="res://images/raton.png" type="Texture" id=16]
[ext_resource path="res://images/leprechaun.png" type="Texture" id=17]
[ext_resource path="res://images/maceta.png" type="Texture" id=18]
[ext_resource path="res://player/Kin_Pj.tscn" type="PackedScene" id=19]
[ext_resource path="res://Items/Contenedor.tscn" type="PackedScene" id=20]
[ext_resource path="res://images/heladera1.png" type="Texture" id=21]
[ext_resource path="res://Items/Botella.gd" type="Script" id=22]
[ext_resource path="res://images/lootBotella1.png" type="Texture" id=23]
[ext_resource path="res://images/lootBotella2.png" type="Texture" id=24]
[ext_resource path="res://images/lootBotella3.png" type="Texture" id=25]
[ext_resource path="res://images/lootBotella4.png" type="Texture" id=26]
[ext_resource path="res://images/inventarioQueso.png" type="Texture" id=27]
[ext_resource path="res://Gui_barras/Barras.tscn" type="PackedScene" id=28]
[ext_resource path="res://sfx/outro.wav" type="AudioStream" id=29]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "heladera",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "heladera_ar",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "armario",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "mesada",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "cofre",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "raton",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "duende",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "maceta",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 26.7875, 21.7845 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "heladera",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "armario",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "mesada",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "cofre",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "maceta",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 26.7875, 21.7845 )

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "default2",
"speed": 2.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "queso",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 24.2993, 23.3414 )

[node name="Level2_Living" type="Node"]

[node name="Node" type="Node" parent="." index="0"]

[node name="Sprite" type="Sprite" parent="Node" index="0"]

position = Vector2( 678.342, 198.092 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="Node" index="1"]

position = Vector2( 2027.77, 195.503 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="Node" index="2"]

position = Vector2( 3418.23, -701.79 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite4" type="Sprite" parent="Node" index="3"]

position = Vector2( 3422.01, 198.928 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite5" type="Sprite" parent="Node" index="4"]

position = Vector2( 4939.36, -1143.48 )
scale = Vector2( 0.764035, 0.764035 )
texture = ExtResource( 5 )

[node name="Sprite6" type="Sprite" parent="Node" index="5"]

position = Vector2( 4409.63, 114.006 )
scale = Vector2( 9.95966, 9.34199 )
texture = ExtResource( 6 )

[node name="Sprite7" type="Sprite" parent="Node" index="6"]

position = Vector2( 6910.6, -827.558 )
scale = Vector2( 4.32636, 4.32636 )
texture = ExtResource( 7 )
flip_v = true
_sections_unfolded = [ "Offset", "Region" ]

[node name="Sprite8" type="Sprite" parent="Node" index="7"]

position = Vector2( 7147.5, -653.09 )
scale = Vector2( 0.451481, 0.451481 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Offset", "Region" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 9 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -2686846, 3, 0, -2621310, 3, 0, -2621309, 3, 0, -2621308, 3, 0, -2621307, 3, 0, -2621306, 3, 0, -2621305, 3, 0, -2621304, 3, 0, -2621303, 3, 0, -2621302, 3, 0, -2621301, 3, 0, -2555764, 3, 0, -2555763, 3, 0, -2555762, 3, 0, -2490226, 3, 0, -2490225, 3, 0, -2490224, 3, 0, -2424687, 3, 0, -2424686, 3, 0, -2359149, 3, 0, -2293612, 3, 0, -2228075, 3, 0, -2228074, 3, 0, -2162537, 3, 0, -2162536, 3, 0, -2162535, 3, 0, -2096999, 3, 0, -2031463, 3, 0, -1965927, 3, 0, -1900391, 3, 0, -1834855, 3, 0, -1769319, 3, 0, -1703783, 3, 0, -1638247, 3, 0, -1572810, 4, 0, -1572809, 4, 0, -1572808, 4, 0, -1572807, 4, 0, -1572806, 4, 0, -1572805, 4, 0, -1572804, 4, 0, -1572803, 4, 0, -1572802, 4, 0, -1572801, 4, 0, -1572800, 4, 0, -1572799, 4, 0, -1572798, 4, 0, -1572797, 4, 0, -1572796, 4, 0, -1572795, 4, 0, -1572794, 4, 0, -1572793, 4, 0, -1572792, 4, 0, -1572791, 4, 0, -1572790, 4, 0, -1572789, 4, 0, -1572788, 4, 0, -1572787, 4, 0, -1572786, 4, 0, -1572785, 4, 0, -1572784, 4, 0, -1572783, 4, 0, -1572782, 4, 0, -1572711, 3, 0, -1507274, 4, 0, -1507246, 4, 0, -1507175, 3, 0, -1441738, 4, 0, -1441710, 4, 0, -1441639, 3, 0, -1376202, 4, 0, -1376103, 3, 0, -1310666, 4, 0, -1310663, 4, 0, -1310662, 4, 0, -1310653, 4, 0, -1310567, 3, 0, -1245130, 4, 0, -1245031, 3, 0, -1179594, 4, 0, -1179573, 4, 0, -1179550, 0, 0, -1179495, 3, 0, -1114058, 4, 0, -1114030, 4, 0, -1114029, 0, 0, -1114028, 0, 0, -1114027, 0, 0, -1114026, 0, 0, -1114025, 0, 0, -1114024, 0, 0, -1114023, 0, 0, -1114022, 0, 0, -1114021, 0, 0, -1114020, 0, 0, -1114019, 0, 0, -1114018, 0, 0, -1114017, 0, 0, -1114016, 0, 0, -1114015, 0, 0, -1114014, 0, 0, -1114013, 0, 0, -1114012, 0, 0, -1114011, 0, 0, -1114010, 0, 0, -1114009, 0, 0, -1114008, 0, 0, -1114007, 0, 0, -1114006, 0, 0, -1114005, 0, 0, -1114001, 0, 0, -1114000, 0, 0, -1113999, 0, 0, -1113998, 0, 0, -1113959, 3, 0, -1048522, 4, 0, -1048516, 4, 0, -1048494, 4, 0, -1048468, 0, 0, -1048467, 0, 0, -1048466, 0, 0, -1048465, 0, 0, -1048464, 0, 0, -1048463, 0, 0, -1048462, 0, 0, -1048461, 0, 0, -1048423, 3, 0, -982986, 4, 0, -982980, 4, 0, -982958, 4, 0, -982924, 3, 0, -982923, 3, 0, -982887, 3, 0, -917450, 4, 0, -917422, 4, 0, -917386, 3, 0, -917351, 3, 0, -851914, 4, 0, -851886, 4, 0, -851850, 3, 0, -851849, 3, 0, -851815, 3, 0, -786378, 4, 0, -786377, 4, 0, -786376, 4, 0, -786375, 4, 0, -786374, 4, 0, -786373, 4, 0, -786372, 4, 0, -786371, 4, 0, -786370, 4, 0, -786369, 4, 0, -786364, 4, 0, -786363, 4, 0, -786362, 4, 0, -786361, 4, 0, -786360, 4, 0, -786359, 4, 0, -786358, 4, 0, -786357, 4, 0, -786356, 4, 0, -786355, 4, 0, -786354, 4, 0, -786353, 4, 0, -786352, 4, 0, -786351, 4, 0, -786350, 4, 0, -786313, 3, 0, -786312, 3, 0, -786311, 3, 0, -786310, 3, 0, -786309, 3, 0, -786279, 3, 0, -720842, 4, 0, -720814, 4, 0, -720772, 3, 0, -720771, 3, 0, -720770, 3, 0, -720743, 3, 0, -655306, 4, 0, -655295, 4, 0, -655278, 4, 0, -655234, 3, 0, -655207, 3, 0, -589770, 4, 0, -589760, 4, 0, -589759, 4, 0, -589742, 4, 0, -589698, 3, 0, -589697, 3, 0, -589671, 3, 0, -524234, 4, 0, -524233, 4, 0, -524232, 4, 0, -524231, 4, 0, -524216, 4, 0, -524206, 4, 0, -524161, 3, 0, -524160, 3, 0, -524135, 3, 0, -393219, 4, 0, -458698, 4, 0, -458696, 4, 0, -458685, 4, 0, -458684, 4, 0, -458680, 4, 0, -458670, 4, 0, -458624, 3, 0, -458623, 3, 0, -458622, 3, 0, -458598, 3, 0, -327683, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393213, 4, 0, -393212, 4, 0, -393211, 4, 0, -393210, 4, 0, -393209, 4, 0, -393208, 4, 0, -393207, 4, 0, -393206, 4, 0, -393205, 4, 0, -393204, 4, 0, -393203, 4, 0, -393202, 4, 0, -393201, 4, 0, -393200, 4, 0, -393199, 4, 0, -393198, 4, 0, -393197, 4, 0, -393196, 4, 0, -393195, 4, 0, -393194, 4, 0, -393193, 4, 0, -393192, 4, 0, -393191, 4, 0, -393190, 4, 0, -393189, 4, 0, -393188, 4, 0, -393187, 4, 0, -393186, 4, 0, -393185, 4, 0, -393184, 4, 0, -393183, 4, 0, -393182, 4, 0, -393181, 4, 0, -393180, 4, 0, -393179, 4, 0, -393178, 4, 0, -393177, 4, 0, -393176, 4, 0, -393175, 4, 0, -393174, 4, 0, -393173, 4, 0, -393172, 4, 0, -393171, 4, 0, -393170, 4, 0, -393169, 4, 0, -393168, 4, 0, -393167, 4, 0, -393166, 4, 0, -393165, 4, 0, -393164, 4, 0, -393163, 4, 0, -393162, 4, 0, -393160, 4, 0, -393159, 4, 0, -393158, 4, 0, -393157, 4, 0, -393134, 4, 0, -393085, 3, 0, -393062, 3, 0, -262147, 4, 0, -262145, 4, 0, -327626, 4, 0, -327598, 4, 0, -327549, 3, 0, -327543, 3, 0, -327542, 3, 0, -327541, 3, 0, -327540, 3, 0, -327526, 3, 0, -196611, 4, 0, -196609, 4, 0, -262090, 4, 0, -262069, 4, 0, -262068, 4, 0, -262067, 4, 0, -262066, 4, 0, -262062, 4, 0, -262013, 3, 0, -262012, 3, 0, -262011, 3, 0, -262010, 3, 0, -262009, 3, 0, -262008, 3, 0, -262003, 3, 0, -262002, 3, 0, -262001, 3, 0, -262000, 3, 0, -261999, 3, 0, -261998, 3, 0, -261997, 3, 0, -261996, 3, 0, -261995, 3, 0, -261994, 3, 0, -261993, 3, 0, -261992, 3, 0, -261991, 3, 0, -261990, 3, 0, -131075, 4, 0, -131073, 4, 0, -196554, 4, 0, -196526, 4, 0, -65539, 4, 0, -65537, 4, 0, -131018, 4, 0, -130990, 4, 0, -3, 4, 0, -1, 4, 0, -65482, 4, 0, -65464, 4, 0, -65463, 4, 0, -65462, 4, 0, -65461, 4, 0, -65460, 4, 0, -65459, 4, 0, -65458, 4, 0, -65454, 4, 0, 65533, 4, 0, 65535, 4, 0, 54, 4, 0, 69, 4, 0, 82, 4, 0, 131069, 4, 0, 131071, 4, 0, 65590, 4, 0, 65591, 4, 0, 65592, 4, 0, 65593, 4, 0, 65594, 4, 0, 65595, 4, 0, 65597, 4, 0, 65598, 4, 0, 65599, 4, 0, 65600, 4, 0, 65618, 4, 0, 196605, 4, 0, 196607, 4, 0, 131106, 4, 0, 131107, 4, 0, 131108, 4, 0, 131109, 4, 0, 131110, 4, 0, 131126, 4, 0, 131154, 4, 0, 262141, 4, 0, 262143, 4, 0, 196647, 4, 0, 196662, 4, 0, 196673, 4, 0, 196674, 4, 0, 196690, 4, 0, 327677, 4, 0, 327679, 4, 0, 262198, 4, 0, 262226, 4, 0, 393213, 4, 0, 393215, 4, 0, 327734, 4, 0, 327762, 4, 0, 458749, 4, 0, 458751, 4, 0, 393270, 4, 0, 393287, 4, 0, 393288, 4, 0, 393289, 4, 0, 393290, 4, 0, 393298, 4, 0, 524285, 4, 0, 524287, 4, 0, 458806, 4, 0, 458826, 4, 0, 458827, 4, 0, 458828, 4, 0, 458834, 4, 0, 589822, 4, 0, 589823, 4, 0, 524342, 4, 0, 524370, 4, 0, 655358, 4, 0, 655359, 4, 0, 589878, 4, 0, 589906, 4, 0, 720894, 4, 0, 720895, 4, 0, 655442, 4, 0, 786430, 4, 0, 786431, 4, 0, 720978, 4, 0, 851966, 4, 0, 851967, 4, 0, 786514, 4, 0, 917502, 4, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 2, 0, 851992, 2, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 2, 0, 852003, 2, 0, 852004, 2, 0, 852005, 2, 0, 852006, 2, 0, 852007, 2, 0, 852008, 2, 0, 852009, 2, 0, 852010, 2, 0, 852011, 2, 0, 852012, 2, 0, 852013, 2, 0, 852014, 2, 0, 852015, 2, 0, 852016, 2, 0, 852017, 2, 0, 852018, 2, 0, 852019, 2, 0, 852020, 2, 0, 852021, 2, 0, 852022, 2, 0, 852023, 3, 0, 852024, 3, 0, 852025, 3, 0, 852026, 3, 0, 852027, 3, 0, 852028, 3, 0, 852029, 3, 0, 852030, 3, 0, 852031, 3, 0, 852032, 3, 0, 852033, 3, 0, 852034, 3, 0, 852035, 3, 0, 852036, 3, 0, 852037, 3, 0, 852038, 3, 0, 852039, 3, 0, 852040, 3, 0, 852041, 3, 0, 852042, 3, 0, 852043, 3, 0, 852044, 3, 0, 852045, 3, 0, 852046, 3, 0, 852047, 3, 0, 852048, 3, 0, 852049, 3, 0, 983038, 4, 0, 983039, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 2, 0, 917530, 2, 0, 917531, 2, 0, 917532, 2, 0, 917533, 2, 0, 917534, 2, 0, 917535, 2, 0, 917536, 2, 0, 917537, 2, 0, 917538, 2, 0, 917539, 2, 0, 917540, 2, 0, 917541, 2, 0, 917542, 2, 0, 917543, 2, 0, 917544, 2, 0, 917545, 2, 0, 917546, 2, 0, 917547, 2, 0, 917548, 2, 0, 917549, 2, 0, 917550, 2, 0, 917551, 2, 0, 917552, 2, 0, 917553, 2, 0, 917554, 2, 0, 917555, 2, 0, 917556, 2, 0, 917557, 2, 0, 917558, 2, 0, 917559, 3, 0, 917560, 3, 0, 917561, 3, 0, 917562, 3, 0, 917563, 3, 0, 917564, 3, 0, 917565, 3, 0, 917566, 3, 0, 917567, 3, 0, 917568, 3, 0, 917569, 3, 0, 917570, 3, 0, 917571, 3, 0, 917572, 3, 0, 917573, 3, 0, 917574, 3, 0, 917575, 3, 0, 917576, 3, 0, 917577, 3, 0, 917578, 3, 0, 917579, 3, 0, 917580, 3, 0, 917581, 3, 0, 917582, 3, 0, 917583, 3, 0, 917584, 3, 0, 917585, 3, 0, 1048575, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 2, 0, 983058, 2, 0, 983059, 2, 0, 983060, 2, 0, 983061, 2, 0, 983062, 2, 0, 983063, 2, 0, 983064, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 983070, 2, 0, 983071, 2, 0, 983072, 2, 0, 983073, 2, 0, 983074, 2, 0, 983075, 2, 0, 983076, 2, 0, 983077, 2, 0, 983078, 2, 0, 983079, 2, 0, 983080, 2, 0, 983081, 2, 0, 983082, 2, 0, 983083, 2, 0, 983084, 2, 0, 983085, 2, 0, 983086, 2, 0, 983087, 2, 0, 983088, 2, 0, 983089, 2, 0, 983090, 2, 0, 983091, 2, 0, 983092, 2, 0, 983093, 2, 0, 983094, 2, 0, 983095, 3, 0, 983096, 3, 0, 983097, 3, 0, 983098, 3, 0, 983099, 3, 0, 983100, 3, 0, 983101, 3, 0, 983102, 3, 0, 983103, 3, 0, 983104, 3, 0, 983105, 3, 0, 983106, 3, 0, 983107, 3, 0, 983108, 3, 0, 983109, 3, 0, 983110, 3, 0, 983111, 3, 0, 983112, 3, 0, 983113, 3, 0, 983114, 3, 0, 983115, 3, 0, 983116, 3, 0, 983117, 3, 0, 983118, 3, 0, 983119, 3, 0, 983120, 3, 0, 983121, 3, 0 )
_sections_unfolded = [ "Cell", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Contenedor3" type="Area2D" parent="." index="2"]

position = Vector2( 4000.68, 574.877 )
scale = Vector2( 2.57253, 2.77742 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
item = null
vivo = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Contenedor3" index="0"]

frames = SubResource( 1 )
animation = "heladera"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contenedor3" index="1"]

position = Vector2( -0.315559, 4.73338 )
shape = SubResource( 2 )

[node name="Contenedor4" type="Area2D" parent="." index="3"]

position = Vector2( 4000.68, 443.877 )
scale = Vector2( 2.57253, 2.77742 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
item = null
vivo = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Contenedor4" index="0"]

frames = SubResource( 1 )
animation = "heladera_ar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contenedor4" index="1"]

position = Vector2( -0.315559, 4.73338 )
shape = SubResource( 2 )

[node name="Kin_Pj" parent="." index="4" instance=ExtResource( 19 )]

position = Vector2( 129.642, 486.45 )

[node name="Contenedor" parent="." index="5" instance=ExtResource( 20 )]

position = Vector2( 1770.61, -10.2743 )

[node name="Contenedor2" type="Area2D" parent="." index="6"]

position = Vector2( 1527.98, 594.003 )
scale = Vector2( 2.81147, 2.12789 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
item = null
vivo = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Contenedor2" index="0"]

frames = SubResource( 3 )
animation = "cofre"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contenedor2" index="1"]

position = Vector2( -0.315559, 4.73338 )
shape = SubResource( 4 )

[node name="Contenedor5" type="Area2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 3865.78, -282.885 )
scale = Vector2( 0.499013, 0.499013 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
item = null
vivo = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Contenedor5" index="0"]

frames = SubResource( 1 )
animation = "armario"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Contenedor5" index="1"]

position = Vector2( -0.315559, 4.73338 )
shape = SubResource( 2 )

[node name="Raton" type="Area2D" parent="." index="8"]

position = Vector2( 2868.57, 23.8488 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
item = null
vivo = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Raton" index="0"]

frames = SubResource( 1 )
animation = "raton"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raton" index="1"]

position = Vector2( -0.315559, 4.73338 )
shape = SubResource( 2 )

[node name="Botella" type="StaticBody2D" parent="." index="9" groups=[
"items",
]]

position = Vector2( 2901.75, -1041.95 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Botella" index="0"]

frames = SubResource( 5 )
animation = "queso"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Botella" index="1"]

shape = SubResource( 6 )

[node name="Barras" parent="." index="10" instance=ExtResource( 28 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="11"]

stream = ExtResource( 29 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Duende" type="Area2D" parent="." index="12"]

position = Vector2( 5758.71, -900.032 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
item = null
vivo = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Duende" index="0"]

position = Vector2( -117.163, -167.376 )
scale = Vector2( 4.34752, 4.34752 )
frames = SubResource( 1 )
animation = "duende"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duende" index="1"]

position = Vector2( -0.315559, 4.73338 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Contenedor3" to="Contenedor3" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Contenedor3" to="Contenedor3" method="_on_Contenedor_body_exited"]

[connection signal="body_entered" from="Contenedor4" to="Contenedor4" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Contenedor4" to="Contenedor4" method="_on_Contenedor_body_exited"]

[connection signal="accion" from="Kin_Pj" to="Contenedor2" method="_on_Kin_Pj_accion"]

[connection signal="body_entered" from="Contenedor2" to="Contenedor2" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Contenedor2" to="Contenedor2" method="_on_Contenedor_body_exited"]

[connection signal="body_entered" from="Contenedor5" to="Contenedor5" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Contenedor5" to="Contenedor5" method="_on_Contenedor_body_exited"]

[connection signal="body_entered" from="Raton" to="Raton" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Raton" to="Raton" method="_on_Contenedor_body_exited"]

[connection signal="body_entered" from="Duende" to="Duende" method="_on_Contenedor_body_entered"]

[connection signal="body_exited" from="Duende" to="Duende" method="_on_Contenedor_body_exited"]


